--- a/src/404.md
+++ b/src/404.md
@@ -1,10 +1,10 @@
--- title --
+--- title
 404 | seankhliao
 
--- description --
+--- description
 Tell me, who has led you so far astray?
 
--- header --
+--- header
 
 <h2><em>404</em> Not Found</h2>
 <p>
