--- a/src/blog/2019-05-24-this-blog.md
+++ b/src/blog/2019-05-24-this-blog.md
@@ -1,6 +1,9 @@
+--- title
+this blog.md
+--- description
 building this blog
+--- main
 
----
 
 Handrolled, artisanal blog.
 Lovingly made from scratch.
