--- a/src/blog/2019-06-21-authnz.md
+++ b/src/blog/2019-06-21-authnz.md
@@ -1,6 +1,9 @@
+--- title
+authnz.md
+--- description
 authentication and authorization
+--- main
 
----
 
 _authn_: authentication is proving your identity
 
