--- a/src/blog/2019-09-04-eduroam.md
+++ b/src/blog/2019-09-04-eduroam.md
@@ -1,6 +1,9 @@
+--- title
+eduroam.md
+--- description
 eduroam for wpa_supplicant
+--- main
 
----
 
 eduroam,
 wifi at educational institutions all around the world,
