--- a/src/blog/2019-05-23-a-blog.md
+++ b/src/blog/2019-05-23-a-blog.md
@@ -1,9 +1,8 @@
 --- title
-a blog.md
+a blog
 --- description
 a blog must start somewhere
 --- main
-
 
 The stars have aligned,
 I've given up on writing yet another fancy static site generator and a blog is finally born
