fix image styling

--- a/src/blog/2019-06-03-todo-list.md
+++ b/src/blog/2019-06-03-todo-list.md
@@ -5,12 +5,12 @@ the checklist way
 --- main
 
 
-# Checklists
+### Checklists
 
 Checklists are useful,
 the reduce errors and [save lives](https://www.hsph.harvard.edu/news/magazine/fall08checklist/)
 
-## I'll _remember_ to... what?
+#### I'll _remember_ to... what?
 
 You might not have dementia,
 but remembering things is hard.
@@ -19,7 +19,7 @@ but what is that something?
 Checklists reduce cognitive load
 and give you a visual confirmation that everything is done
 
-## Checklists are fun
+#### Checklists are fun
 
 Who doesn;t like the sense of accomplishment
 from ticking off another line item,
