--- a/src/blog/2019-06-15-biases.md
+++ b/src/blog/2019-06-15-biases.md
@@ -5,12 +5,12 @@ self reflection
 --- main
 
 
-# TCK
+### TCK
 
 Recently I was introduced to the term TCK or [Third Culture Kid](https://en.wikipedia.org/wiki/Third_culture_kid),
 I think it adequately describes me
 
-## What bias?
+#### What bias?
 
 We all have them,
 it's just if you recoqnize them.
@@ -23,7 +23,7 @@ The best you can do is to be _aware_ of them,
 catch them before you open your mouth or do something,
 and make corrective actions
 
-## Politically correct
+#### Politically correct
 
 The most tiring form of correctness,
 as you strive to offend _no one_,
