--- a/src/blog/2019-06-21-authnz.md
+++ b/src/blog/2019-06-21-authnz.md
@@ -9,7 +9,7 @@ _authn_: authentication is proving your identity
 
 _authz_: authorization is proving your permission to access something
 
-# RBAC
+### RBAC
 
 role based access control
 
@@ -17,13 +17,13 @@ role based access control
 - every passive things (accessed) has permissions needed to access them
 - _roles_ are groups of permissions which can be assigned to identities
 
-## GCP
+#### GCP
 
 _service accounts_ are assigned roles in the [iam/admin](https://console.cloud.google.com/iam-admin/iam) page
 
 _roles_ and their permissions can be edited in the [iam/roles](https://console.cloud.google.com/iam-admin/roles) page
 
-## Kubernetes
+#### Kubernetes
 
 _service accounts_ can be created through the `ServiceAccount` kind
 
@@ -31,7 +31,7 @@ _roles_ can be created through the `Role` and `ClusterRole` kinds
 
 _roles_ can be assigned to service accounts through `RoleBinding` and `ClusterRoleBinding` kinds
 
-# ACL
+### ACL
 
 access control lists
 
@@ -39,9 +39,9 @@ similar to RBAC,
 but directly maps permissions to users.
 ACL with only groups is identical to RBAC
 
-# in the wild
+### in the wild
 
-## _single_ key
+#### _single_ key
 
 Your access token / key is tied to your identity,
 and sometimes limited in specific permissions,
@@ -50,7 +50,7 @@ examples:
 - SSH key
 - Magic link emails
 
-## _multi_ key
+#### _multi_ key
 
 You have a (public) stable id and a (volatile) secret,
 examples:
