--- a/src/blog/2019-09-04-eduroam.md
+++ b/src/blog/2019-09-04-eduroam.md
@@ -11,7 +11,7 @@ but,
 settings differ,
 and noone gives a raw wpa_supplicant config
 
-## _NTU_ (National Taiwan University)
+#### _NTU_ (National Taiwan University)
 
 wpa_supplicant config for accounts with NTU
 
@@ -35,7 +35,7 @@ network={
 }
 ```
 
-## _UvA_ (University of Amsterdam)
+#### _UvA_ (University of Amsterdam)
 
 wpa_supplicant config for accounts with UvA
 
