--- a/src/blog/2020-05-06-webauthn.md
+++ b/src/blog/2020-05-06-webauthn.md
@@ -95,7 +95,7 @@ cred, err := wan.FinishRegistration(user, sd, r)
 ##### Login
 
 ```go
-// Login 2andler 1
+// Login handler 1
 ca, sd, err := wan.BeginLogin(user)
 // send ca to client
 // save sd to session store
