--- a/src/blog/2020-08-08-emoji.md
+++ b/src/blog/2020-08-08-emoji.md
@@ -12,7 +12,7 @@ Our conversation took the form:
 
 > actual message \*emotion/tone/action\*
 
-We mused how much clearer it made the conversation,
+We mused on how much clearer it made the conversation,
 but the extra effort required meant that it didn't last long
 
 Now that (smartphone) keyboards have emojis that are easily accessible,
