--- a/src/life/2020-08-10-timeline.md
+++ b/src/life/2020-08-10-timeline.md
@@ -9,6 +9,15 @@ _Groups_ I've been in,
 _things_ I've done,
 in reverse chronological order
 
+#### _Other_
+
+- Military service
+  - 2 months basic
+  - 2 months doing nothing
+    - marching around a tiny island
+    - firing a shoulder mounted rocket launcher
+    - the resupply operation was the most interesting
+
 #### _Tertiary_ education
 
 - A public university <!-- University of Amsterdam -->
