--- a/site/404.md
+++ b/site/404.md
@@ -1,14 +1,12 @@
 ---
 description: Tell me, who has led you so far astray?
-header: |-
-  <h2><em>404</em> Not Found</h2>
-  <p>
-    Where did you go?<br />
-    I should know<br />
-    but it's cold, and I don't wanna be lonely<br />
-    So show me <a href="/"><em>the way home</em></a
-    ><br />
-    I can't lose another life<br />
-  </p>
+h1: <em>404</em> Not Found
+h2: >
+  Where did you go?<br />
+  I should know<br />
+  but it's cold, and I don't wanna be lonely<br />
+  So show me <a href="/"><em>the way home</em></a
+  ><br />
+  I can't lose another life<br />
 title: 404 | seankhliao
 ---
