--- a/site/blog/12020-07-28-diff-tools.md
+++ b/site/blog/12020-07-28-diff-tools.md
@@ -5,6 +5,12 @@ title: diff tools
 
 ### _diff_ tools
 
+#### _12020-10-25_ update
+
+[git-delta](https://github.com/dandavison/delta) is basically perfect
+
+#### _orig_
+
 I use git in a terminal, and I want:
 
 - side by side diff
