--- a/site/blog/12020-10-29-matrix-irc.md
+++ b/site/blog/12020-10-29-matrix-irc.md
@@ -18,6 +18,7 @@ Not sure, but they advertise bridges to IRC
 
 Their bridge/bots are can be somewhat unresponsive,
 solution is to wait a few days and try again.
+A safe interaction to test responsiveness is to change nick with appservice
 
 note the different type of syntax for the 2 bots.
 
