--- a/site/blog/12019-05-24-this-blog.md
+++ b/site/blog/12019-05-24-this-blog.md
@@ -2,6 +2,7 @@
 description: building this blog
 title: this blog
 ---
+
 Handrolled, artisanal blog.
 Lovingly made from scratch.
 Decorated with hair torn out from trying to get things to work.
@@ -34,7 +35,7 @@ Getting it to respect subdirectory contexts is still confusing
 #### TODO
 
 - make analytics more useful
-- trigger [Wayback Machine](web.archive.org) archive
+- trigger [Wayback Machine](https://web.archive.org) archive
 - trigger [Google Search Console](https://search.google.com/search-console/about) indexing
 - figure out pipeline for images
 - integrate with main site
@@ -42,3 +43,4 @@ Getting it to respect subdirectory contexts is still confusing
 - add manifest?
 - add serviceworker?
 - purge caches
+
