--- a/site/blog/12020-05-06-webauthn.md
+++ b/site/blog/12020-05-06-webauthn.md
@@ -7,8 +7,8 @@ title: webauthn
 
 libraries:
 
-- [duo-labs/webauthn](github.com/duo-labs/webauthn)
-- [koesie10/webauthn](github.com/koesie10/webauthn)
+- [duo-labs/webauthn](https://github.com/duo-labs/webauthn)
+- [koesie10/webauthn](https://github.com/koesie10/webauthn)
 
 #### _config_
 
