--- a/site/blog/12020-11-11-web-git.md
+++ b/site/blog/12020-11-11-web-git.md
@@ -11,26 +11,37 @@ Or you think it's more convenient to have a ui to look at history and stuff.
 
 Options:
 
-### _gitweb_
+#### _smithy_
+
+[smithy](https://smithy.honza.ca/smithy)
+minimalist single binary go executable,
+font size is surprisingly large and not dense,
+probably needs some CSS work.
+
+#### _gitweb_
 
 Built into git, has a standalone mode or a fcgi mode.
 Bare but functional design.
 Ugly urls: `http://arch.seankhliao.com/?p=com-seankhliao.git;a=summary`
 
-### cgit
+#### _cgit_
 
-Something you need to install, run with fgci or wsgi and a web server.
+[cgit](https://git.zx2c4.com/cgit/)
+is something you need to install, run with fgci or wsgi and a web server.
 UI is like gitweb but a bit sleeker, pretty (normal) urls.
 
-### git-webui
+#### _git-webui_
 
-Some not very popular project (not packaged in ditribution repos).
+[git-webui](https://github.com/alberthier/git-webui)
+is some not very popular project (not packaged in ditribution repos).
 For a single repo, modern ui, IDE like, allows you to work on git (I think).
+Less for sharing?
 Doesn't play nice with dark mode.
 
-### stagit
+#### _stagit_
 
-Also not very popular thing.
+[stagit](https://codemadness.org/git/)
+is also not very popular thing.
 Static site generator for git repos.
 Only shows the latest commit on the default branch and diffs between adjacent commits
 (otherwise there's a combinatoral explosion of possibilities).
