--- a/site/blog/12021-02-12-otel-go-v0.16.0-tracing.md
+++ b/site/blog/12021-02-12-otel-go-v0.16.0-tracing.md
@@ -15,6 +15,8 @@ using [OTLP exporters](https://pkg.go.dev/go.opentelemetry.io/otel/exporters/otl
 to the [collector v0.20.0](https://github.com/open-telemetry/opentelemetry-collector)
 and onto [jaeger](https://www.jaegertracing.io/).
 
+test code: [testrepo-otel-v0-16-0]https://github.com/seankhliao/testrepo-otel-v0-16-0)
+
 #### _dependencies_
 
 OTel Go has constantly been restructuring the library during beta,
