--- a/content/blog/12021-04-06-job-6-months.md
+++ b/content/blog/12021-04-06-job-6-months.md
@@ -5,6 +5,10 @@ description: maybe i should just rattle off the list of jira tickets I closed?
 
 ### _6_ months
 
+following progress reports at
+[2](/blog/12020-12-03-junior-sre-at-non-tech/)
+[4](/blog/12021-01-27-4-months-at-job/) months
+
 I... fiddled with alerting rules (nothing major),
 dumped more things into terraform and refactored it a bit,
 wrote a helm chart for our "standard microservice",
